@@ -50,6 +50,7 @@
 #  ifndef HAVE_DRAND48
 #    define drand48() ((double)rand() / (double)(RAND_MAX + 1))
 #    define HAVE_DRAND48 1
+#	 define srand48(seed) (srand(seed))
 #  endif
 
 #endif  /* BRLCADBUILD & HAVE_CONFIG_H */
