@@ -1866,12 +1866,6 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "tktable", "..\tktable\tktab
 		{055F2F38-D3AB-4A30-A8C6-A7C9A393BB30} = {055F2F38-D3AB-4A30-A8C6-A7C9A393BB30}
 	EndProjectSection
 EndProject
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "librender", "..\render\render.vcproj", "{069BA3F2-838A-4401-ACE6-BC687C57A243}"
-	ProjectSection(WebsiteProperties) = preProject
-		Debug.AspNetCompiler.Debug = "True"
-		Release.AspNetCompiler.Debug = "False"
-	EndProjectSection
-EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "pixcmp", "..\pixcmp\pixcmp.vcproj", "{8AAF9606-7C95-4BB1-8EB7-DDD3304D03C1}"
 	ProjectSection(WebsiteProperties) = preProject
 		Debug.AspNetCompiler.Debug = "True"
@@ -1885,6 +1879,12 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "libtie", "..\libtie\libtie.
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "librender", "..\librender\librender.vcproj", "{DF9092D4-42CA-4532-BB96-EB5BBFA8308A}"
+	ProjectSection(WebsiteProperties) = preProject
+		Debug.AspNetCompiler.Debug = "True"
+		Release.AspNetCompiler.Debug = "False"
+	EndProjectSection
+EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "pixblend", "..\pixblend\pixblend.vcproj", "{20068CD5-F9D4-414C-A4AD-D7188108E593}"
 	ProjectSection(WebsiteProperties) = preProject
 		Debug.AspNetCompiler.Debug = "True"
 		Release.AspNetCompiler.Debug = "False"
@@ -2628,6 +2628,10 @@ Global
 		{DF9092D4-42CA-4532-BB96-EB5BBFA8308A}.Release|Win32.Build.0 = Release|Win32
 		{DF9092D4-42CA-4532-BB96-EB5BBFA8308A}.Release|x64.ActiveCfg = Release|x64
 		{DF9092D4-42CA-4532-BB96-EB5BBFA8308A}.Release|x64.Build.0 = Release|x64
+		{20068CD5-F9D4-414C-A4AD-D7188108E593}.Release|Win32.ActiveCfg = Release|Win32
+		{20068CD5-F9D4-414C-A4AD-D7188108E593}.Release|Win32.Build.0 = Release|Win32
+		{20068CD5-F9D4-414C-A4AD-D7188108E593}.Release|x64.ActiveCfg = Release|x64
+		{20068CD5-F9D4-414C-A4AD-D7188108E593}.Release|x64.Build.0 = Release|x64
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
