@@ -233,11 +233,11 @@
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat;f90;for;f;fpp"
 			>
 			<File
-				RelativePath="..\..\..\src\other\tkpng\tkImgPNG.c"
+				RelativePath="..\..\..\src\other\tkpng\generic\tkImgPNG.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\other\tkpng\tkImgPNGInit.c"
+				RelativePath="..\..\..\src\other\tkpng\generic\tkImgPNGInit.c"
 				>
 			</File>
 		</Filter>
