@@ -1,0 +1,56 @@
+/*                       T I M E T E S T E R . C
+ * BRL-CAD
+ *
+ * Copyright (c) 2011 United States Government as represented by
+ * the U.S. Army Research Laboratory.
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public License
+ * version 2.1 as published by the Free Software Foundation.
+ *
+ * This library is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this file; see the file named COPYING for more
+ * information.
+ */
+
+#include "common.h"
+
+#include <stdlib.h>
+#include <stdio.h>
+#include <string.h>
+#include <stdint.h>
+#include <inttypes.h>
+
+#include "bu.h"
+
+int
+main(int argc, char **argv)
+{
+	int64_t time1, time2;
+	int i = 0;
+	time1 = bu_gettime();
+	while (i < 1.0e6) {
+		time2 = bu_gettime();
+		i = time2 - time1;
+	}
+	printf("Time delta: %i\n", i);
+	printf("time1: %" PRIi64 "\n", time1);
+	printf("time2: %" PRIi64 "\n", time2);
+	exit(0);
+}
+
+/** @} */
+/*
+ * Local Variables:
+ * mode: C
+ * tab-width: 8
+ * indent-tabs-mode: t
+ * c-file-style: "stroustrup"
+ * End:
+ * ex: shiftwidth=4 tabstop=8
+ */
